Inicio: Se agrega estilos a la estructura inicio

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>PlayerGamer</title>
     <link rel="stylesheet" href="./CSS/estilos.css" />
   </head>
+
   <body>
     <header class="hero">
       <nav class="nav">
@@ -27,7 +28,7 @@
 
       <section class="hero__main contenedor">
         <div class="hero__textos">
-          <h1 class="hero__titulo">"Si ya acabaste el juego, vendelo"</h1>
+          <h1 class="hero__titulo">"Si ya acabaste el juego, ¡véndelo!"</h1>
           <p class="hero__paragrafo">
             Los videojuegos han crecido, estamos listos para aceptar historias
             maduras como los libros y peliculas
@@ -39,7 +40,7 @@
               type="search"
               id="BuscarJuego"
               name="BuscarJuego"
-              placeholder="Videojuego..."
+              placeholder="..."
             />
             <input type="submit" class="hero__boton" />
           </form>
@@ -50,5 +51,165 @@
         </figure>
       </section>
     </header>
+
+    <main class="main">
+      <section class="about">
+        <div class="about__control contenedor">
+          <div class="about__seller">
+            <h2 class="about__titulo">
+              Compra videojuegos y compártelos como nunca antes.
+            </h2>
+            <figure class="about__picture">
+              <img src="/img/gamer1.jpg" alt="jugador" class="about__img1" />
+            </figure>
+            <h3 class="about__subtitulo">Por que vender</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio at
+              libero minus soluta quaerat veritatis tempore nostrum delectus.
+              Voluptate illo excepturi ratione ex dolore. Doloremque quasi
+              recusandae reprehenderit perspiciatis illo?
+            </p>
+            <a href="#" class="about__cta">Vende</a>
+          </div>
+
+          <div>
+            <figure class="about__picture">
+              <img src="/img/gamer4.jpg" alt="jugador" class="about__img1" />
+            </figure>
+            <h3 class="about__subtitulo">Por que comprar</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio at
+              libero minus soluta quaerat veritatis tempore nostrum delectus.
+              Voluptate illo excepturi ratione ex dolore. Doloremque quasi
+              recusandae reprehenderit perspiciatis illo?
+            </p>
+            <a href="#" class="about__cta">Compra</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery">
+        <div class="gallery__control contenedor">
+          <h2 class="gallery__title">A que nos dedicamos</h2>
+          <div class="gallery__contenedor">
+            <img src="/img/img1.jpg" class="gallery__picture" />
+
+            <img src="/img/img2.jpg" class="gallery__picture" />
+
+            <img src="/img/img3.jpg" class="gallery__picture" />
+
+            <img src="/img/img4.jpg" class="gallery__picture" />
+
+            <img src="/img/img5.jpg" class="gallery__picture" />
+
+            <img src="/img/img6.jpg" class="gallery__picture" />
+          </div>
+        </div>
+      </section>
+
+      <section class="portfolio">
+        <div class="portfolio__control contenedor">
+          <h2 class="portfolio__title">Nuestros planes</h2>
+
+          <div class="portfolio__cards">
+            <article class="portfolio__card">
+              <img src="/img/img7.jpg" class="portfolio__picture" />
+
+              <div class="portfolio__texts">
+                <h3 class="portfolio__subtitle">Unete a nuestro plan</h3>
+                <p class="portfolio__paragraph">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Asperiores esse quam maxime numquam eius, architecto alias
+                  tenetur optio eveniet repellendus.
+                </p>
+                <a href="#" class="portfolio__cta">Entra ahora</a>
+              </div>
+            </article>
+
+            <article class="portfolio__card">
+              <img src="/img/img8.jpg" class="portfolio__picture" />
+
+              <div class="portfolio__texts">
+                <h3 class="portfolio__subtitle">Unete a nuestro plan</h3>
+                <p class="portfolio__paragraph">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Asperiores esse quam maxime numquam eius, architecto alias
+                  tenetur optio eveniet repellendus.
+                </p>
+                <a href="#" class="portfolio__cta">Entra ahora</a>
+              </div>
+            </article>
+
+            <article class="portfolio__card">
+              <img src="/img/img9.jpg" class="portfolio__picture" />
+
+              <div class="portfolio__texts">
+                <h3 class="portfolio__subtitle">Unete a nuestro plan</h3>
+                <p class="portfolio__paragraph">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Asperiores esse quam maxime numquam eius, architecto alias
+                  tenetur optio eveniet repellendus.
+                </p>
+                <a href="#" class="portfolio__cta">Entra ahora</a>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section class="layouts">
+        <div class="contenedor">
+          <div class="layouts__control">
+            <figure class="layouts__picture">
+              <img src="/img/gamer3.jpg" class="layouts__img3" />
+            </figure>
+
+            <div class="layouts__referido">
+              <h2 class="layouts__title">Puntos para tus juegos siempre</h2>
+              <p class="layouts__paragrafo">
+                Con nuestro sistema de referidos, ventas y compras que realices,
+                acumularas puntos que usaras como pago de tus juegos
+              </p>
+              <a href="#" class="layouts__cta">Entra ahora</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <h2>Tu opinion</h2>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__container contenedor">
+        <div class="footer__texts">
+          <h2 class="title">Contactanos</h2>
+          <div class="footer__icons">
+            <a href="#" class="footer__icon fab fa-facebook-f"></a>
+            <a href="#" class="footer__icon fab fa-twitter"></a>
+            <a href="#" class="footer__icon fab fa-instagram"></a>
+          </div>
+          <nav class="footer__nav">
+            <a href="#" class="footer__link">Inicio</a>
+            <a href="#" class="footer__link">Sobre nosotros</a>
+            <a href="#" class="footer__link">Trabjos</a>
+          </nav>
+
+          <p class="footer__copy">
+            Derechos reservados &copy; Cristian Rodriguez
+          </p>
+        </div>
+
+        <figure class="footer__img">
+          <img src="/img/mail.svg" class="footer__picture" />
+        </figure>
+      </div>
+    </footer>
+
+    <script
+      src="https://kit.fontawesome.com/0f3d7928c1.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
