Estructura HTML para entrega: Se mueve archivos html a carpeta pages

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
           <div class="nav__links">
             <a href="#" class="nav__link">Inicio</a>
-            <a href="#" class="nav__link">Producto</a>
-            <a href="#" class="nav__link">Contacto</a>
+            <a href="/pages/producto.html" class="nav__link">Producto</a>
+            <a href="/pages/servicios.html" class="nav__link">servicios</a>
             <a href="#" class="nav__link nav__link--boton">Iniciar Sesión</a>
             <a href="#" class="nav__link nav__link--boton">Registro</a>
           </div>
@@ -109,20 +109,18 @@
 
       <section class="portfolio">
         <div class="portfolio__control contenedor">
-          <h2 class="portfolio__title">Nuestros planes</h2>
+          <h2 class="portfolio__title">Nuestros Equipo</h2>
 
           <div class="portfolio__cards">
             <article class="portfolio__card">
               <img src="/img/img7.jpg" class="portfolio__picture" />
 
               <div class="portfolio__texts">
-                <h3 class="portfolio__subtitle">Unete a nuestro plan</h3>
-                <p class="portfolio__paragraph">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Asperiores esse quam maxime numquam eius, architecto alias
-                  tenetur optio eveniet repellendus.
+                <h3 class="portfolio__subtitle">Cristian Rodriguez</h3>
+                <p class="portfolio__paragrafo">
+                  [Product Owner]</p>
+                  <a href="#" class="portfolio__cta">Mi Historia</a>
                 </p>
-                <a href="#" class="portfolio__cta">Entra ahora</a>
               </div>
             </article>
 
@@ -130,13 +128,11 @@
               <img src="/img/img8.jpg" class="portfolio__picture" />
 
               <div class="portfolio__texts">
-                <h3 class="portfolio__subtitle">Unete a nuestro plan</h3>
-                <p class="portfolio__paragraph">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Asperiores esse quam maxime numquam eius, architecto alias
-                  tenetur optio eveniet repellendus.
+                <h3 class="portfolio__subtitle">Felipe Quintero</h3>
+                <p class="portfolio__paragrafo">
+                  [Scrum Master]
                 </p>
-                <a href="#" class="portfolio__cta">Entra ahora</a>
+                <a href="#" class="portfolio__cta">Mi Historia</a>
               </div>
             </article>
 
@@ -144,13 +140,11 @@
               <img src="/img/img9.jpg" class="portfolio__picture" />
 
               <div class="portfolio__texts">
-                <h3 class="portfolio__subtitle">Unete a nuestro plan</h3>
-                <p class="portfolio__paragraph">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Asperiores esse quam maxime numquam eius, architecto alias
-                  tenetur optio eveniet repellendus.
+                <h3 class="portfolio__subtitle">Alejandra Salgado</h3>
+                <p class="portfolio__paragrafo">
+                [Cross-funcional] 
                 </p>
-                <a href="#" class="portfolio__cta">Entra ahora</a>
+                <a href="#" class="portfolio__cta">Mi Historia</a>
               </div>
             </article>
           </div>
@@ -178,6 +172,12 @@
 
       <section>
         <h2>Tu opinion</h2>
+      </section>
+
+      <section class="noticias">
+        <div>
+          <h2 class="noticias__titulo">Ultimas Noticias</h2>
+        </div>
       </section>
     </main>
 
