--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PlayerGamer</title>
   <link rel="stylesheet" href="./CSS/estilos.css" />
+  <link rel="stylesheet" href="./CSS/normalize.css">
 </head>
 
 <body>
