layout: empleando css

--- a/index.html
+++ b/index.html
@@ -51,35 +51,37 @@
   <main class="main">
     <section class="about">
       <div class="about__control contenedor">
-        <div class="about__seller">
-          <h2 class="about__titulo">
-            Compra videojuegos y compártelos como nunca antes.
-          </h2>
-          <figure class="about__picture">
-            <img src="./img/gamer1.jpg" alt="jugador" class="about__img1" />
-          </figure>
-          <h3 class="about__subtitulo">Por que vender</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio at
-            libero minus soluta quaerat veritatis tempore nostrum delectus.
-            Voluptate illo excepturi ratione ex dolore. Doloremque quasi
-            recusandae reprehenderit perspiciatis illo?
-          </p>
-          <a href="#" class="about__cta">Vende</a>
-        </div>
-
-        <div>
-          <figure class="about__picture">
-            <img src="./img/gamer4.jpg" alt="jugador" class="about__img1" />
-          </figure>
-          <h3 class="about__subtitulo">Por que comprar</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio at
-            libero minus soluta quaerat veritatis tempore nostrum delectus.
-            Voluptate illo excepturi ratione ex dolore. Doloremque quasi
-            recusandae reprehenderit perspiciatis illo?
-          </p>
-          <a href="#" class="about__cta">Compra</a>
+        <h2 class="about__titulo">
+          Compra videojuegos y compártelos como nunca antes.
+        </h2>
+        <div class="about__secciones">
+          <div class="about__seller">
+            <figure class="about__picture">
+              <img src="./img/gamer1.jpg" alt="jugador" class="about__img1" />
+            </figure>
+            <h3 class="about__subtitulo">Por que vender</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio at
+              libero minus soluta quaerat veritatis tempore nostrum delectus.
+              Voluptate illo excepturi ratione ex dolore. Doloremque quasi
+              recusandae reprehenderit perspiciatis illo?
+            </p>
+            <a href="#" class="about__cta">Vende</a>
+          </div>
+  
+          <div class="about__seller">
+            <figure class="about__picture">
+              <img src="./img/gamer4.jpg" alt="jugador" class="about__img1" />
+            </figure>
+            <h3 class="about__subtitulo">Por que comprar</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio at
+              libero minus soluta quaerat veritatis tempore nostrum delectus.
+              Voluptate illo excepturi ratione ex dolore. Doloremque quasi
+              recusandae reprehenderit perspiciatis illo?
+            </p>
+            <a href="#" class="about__cta">Compra</a>
+          </div>
         </div>
       </div>
     </section>
