--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <img src="./img/gamer1.jpg" alt="jugador" class="about__img1" />
             </figure>
             <h3 class="about__subtitulo">Por que vender</h3>
-            <p>
+            <p class="about__text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio at
               libero minus soluta quaerat veritatis tempore nostrum delectus.
               Voluptate illo excepturi ratione ex dolore. Doloremque quasi
@@ -74,7 +74,7 @@
               <img src="./img/gamer4.jpg" alt="jugador" class="about__img1" />
             </figure>
             <h3 class="about__subtitulo">Por que comprar</h3>
-            <p>
+            <p class="about__text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio at
               libero minus soluta quaerat veritatis tempore nostrum delectus.
               Voluptate illo excepturi ratione ex dolore. Doloremque quasi
@@ -90,17 +90,11 @@
       <div class="gallery__control contenedor">
         <h2 class="gallery__title">A que nos dedicamos</h2>
         <div class="gallery__contenedor">
-          <img src="./img/img1.jpg" class="gallery__picture" />
+          <img src="./img/img4.jpg" class="gallery__picture" />
 
           <img src="./img/img2.jpg" class="gallery__picture" />
 
           <img src="./img/img3.jpg" class="gallery__picture" />
-
-          <img src="./img/img4.jpg" class="gallery__picture" />
-
-          <img src="./img/img5.jpg" class="gallery__picture" />
-
-          <img src="./img/img6.jpg" class="gallery__picture" />
         </div>
       </div>
     </section>
