se agrega fuentes, icono hero

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <nav class="nav">
       <section class="nav__contenedor contenedor">
         <figure class="nav__logo">
+          <img src="./img/bx-game.svg" class="hero__picture" />
           <h2 class="nav__titulo">PlayerGamer</h2>
         </figure>
 
@@ -96,6 +97,7 @@
 
           <img src="./img/img3.jpg" class="gallery__picture" />
         </div>
+        <h3 class="gallery__comentario">Tu opinión cuenta</h3>
       </div>
     </section>
 
