--- a/index.html
+++ b/index.html
@@ -1,207 +1,262 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>PlayerGamer</title>
+        <link rel="stylesheet" href="./CSS/estilos.css" />
+        <link rel="stylesheet" href="./CSS/normalize.css" />
+    </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PlayerGamer</title>
-  <link rel="stylesheet" href="./CSS/estilos.css" />
-  <link rel="stylesheet" href="./CSS/normalize.css">
-</head>
+    <body>
+        <header class="hero">
+            <nav class="nav">
+                <section class="nav__contenedor contenedor">
+                    <figure class="nav__logo">
+                        <img src="./img/bx-game.svg" class="hero__picture" />
+                        <h2 class="nav__titulo">PlayerGamer</h2>
+                    </figure>
 
-<body>
-  <header class="hero">
-    <nav class="nav">
-      <section class="nav__contenedor contenedor">
-        <figure class="nav__logo">
-          <img src="./img/bx-game.svg" class="hero__picture" />
-          <h2 class="nav__titulo">PlayerGamer</h2>
-        </figure>
+                    <div class="nav__links">
+                        <a href="#" class="nav__link">Inicio</a>
+                        <a href="/pages/producto.html" class="nav__link"
+                            >Producto</a
+                        >
+                        <a href="/pages/servicios.html" class="nav__link"
+                            >servicios</a
+                        >
+                        <a href="#" class="nav__link nav__link--boton"
+                            >Iniciar Sesión</a
+                        >
+                        <a href="#" class="nav__link nav__link--boton"
+                            >Registro</a
+                        >
+                    </div>
+                </section>
+            </nav>
 
-        <div class="nav__links">
-          <a href="#" class="nav__link">Inicio</a>
-          <a href="/pages/producto.html" class="nav__link">Producto</a>
-          <a href="/pages/servicios.html" class="nav__link">servicios</a>
-          <a href="#" class="nav__link nav__link--boton">Iniciar Sesión</a>
-          <a href="#" class="nav__link nav__link--boton">Registro</a>
-        </div>
-      </section>
-    </nav>
+            <section class="hero__main contenedor">
+                <div class="hero__textos">
+                    <h1 class="hero__titulo">
+                        "Si ya acabaste el juego, ¡véndelo!"
+                    </h1>
+                    <p class="hero__paragrafo">
+                        Los videojuegos han crecido, estamos listos para aceptar
+                        historias maduras como los libros y peliculas
+                    </p>
+                    <form action="/action_page.php" class="hero__form">
+                        <label for="BuscarJuego" class="hero__buscar"
+                            >Buscar:</label
+                        >
+                        <input
+                            class="hero__search"
+                            type="search"
+                            id="BuscarJuego"
+                            name="BuscarJuego"
+                            placeholder="..."
+                        />
+                        <input type="submit" class="hero__boton" />
+                    </form>
+                </div>
 
-    <section class="hero__main contenedor">
-      <div class="hero__textos">
-        <h1 class="hero__titulo">"Si ya acabaste el juego, ¡véndelo!"</h1>
-        <p class="hero__paragrafo">
-          Los videojuegos han crecido, estamos listos para aceptar historias
-          maduras como los libros y peliculas
-        </p>
-        <form action="/action_page.php" class="hero__form">
-          <label for="BuscarJuego" class="hero__buscar">Buscar:</label>
-          <input class="hero__search" type="search" id="BuscarJuego" name="BuscarJuego" placeholder="..." />
-          <input type="submit" class="hero__boton" />
-        </form>
-      </div>
+                <figure class="hero__picture">
+                    <img src="ilustracion.svg" class="hero__img" />
+                </figure>
+            </section>
+        </header>
 
-      <figure class="hero__picture">
-        <img src="ilustracion.svg" class="hero__img" />
-      </figure>
-    </section>
-  </header>
+        <main class="main">
+            <section class="about">
+                <div class="about__control contenedor">
+                    <h2 class="about__titulo">
+                        Compra videojuegos y compártelos como nunca antes.
+                    </h2>
+                    <div class="about__secciones">
+                        <div class="about__seller">
+                            <figure class="about__picture">
+                                <img
+                                    src="./img/gamer1.jpg"
+                                    alt="jugador"
+                                    class="about__img1"
+                                />
+                            </figure>
+                            <h3 class="about__subtitulo">Por que vender</h3>
+                            <p class="about__text">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Odio at libero minus soluta
+                                quaerat veritatis tempore nostrum delectus.
+                                Voluptate illo excepturi ratione ex dolore.
+                                Doloremque quasi recusandae reprehenderit
+                                perspiciatis illo?
+                            </p>
+                            <a href="#" class="about__cta">Vende</a>
+                        </div>
 
-  <main class="main">
-    <section class="about">
-      <div class="about__control contenedor">
-        <h2 class="about__titulo">
-          Compra videojuegos y compártelos como nunca antes.
-        </h2>
-        <div class="about__secciones">
-          <div class="about__seller">
-            <figure class="about__picture">
-              <img src="./img/gamer1.jpg" alt="jugador" class="about__img1" />
-            </figure>
-            <h3 class="about__subtitulo">Por que vender</h3>
-            <p class="about__text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio at
-              libero minus soluta quaerat veritatis tempore nostrum delectus.
-              Voluptate illo excepturi ratione ex dolore. Doloremque quasi
-              recusandae reprehenderit perspiciatis illo?
-            </p>
-            <a href="#" class="about__cta">Vende</a>
-          </div>
-  
-          <div class="about__seller">
-            <figure class="about__picture">
-              <img src="./img/gamer4.jpg" alt="jugador" class="about__img1" />
-            </figure>
-            <h3 class="about__subtitulo">Por que comprar</h3>
-            <p class="about__text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio at
-              libero minus soluta quaerat veritatis tempore nostrum delectus.
-              Voluptate illo excepturi ratione ex dolore. Doloremque quasi
-              recusandae reprehenderit perspiciatis illo?
-            </p>
-            <a href="#" class="about__cta">Compra</a>
-          </div>
-        </div>
-      </div>
-    </section>
+                        <div class="about__seller">
+                            <figure class="about__picture">
+                                <img
+                                    src="./img/gamer4.jpg"
+                                    alt="jugador"
+                                    class="about__img1"
+                                />
+                            </figure>
+                            <h3 class="about__subtitulo">Por que comprar</h3>
+                            <p class="about__text">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Odio at libero minus soluta
+                                quaerat veritatis tempore nostrum delectus.
+                                Voluptate illo excepturi ratione ex dolore.
+                                Doloremque quasi recusandae reprehenderit
+                                perspiciatis illo?
+                            </p>
+                            <a href="#" class="about__cta">Compra</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
-    <section class="gallery">
-      <div class="gallery__control contenedor">
-        <h2 class="gallery__title">A que nos dedicamos</h2>
-        <div class="gallery__contenedor">
-          <img src="./img/img4.jpg" class="gallery__picture" />
+            <section class="gallery">
+                <div class="gallery__control contenedor">
+                    <h2 class="gallery__title">A que nos dedicamos</h2>
+                    <div class="gallery__contenedor">
+                        <img src="./img/img4.jpg" class="gallery__picture" />
 
-          <img src="./img/img2.jpg" class="gallery__picture" />
+                        <img src="./img/img2.jpg" class="gallery__picture" />
 
-          <img src="./img/img3.jpg" class="gallery__picture" />
-        </div>
-        <h3 class="gallery__comentario">Tu opinión cuenta</h3>
-      </div>
-    </section>
+                        <img src="./img/img3.jpg" class="gallery__picture" />
+                    </div>
+                    <h3 class="gallery__comentario">Tu opinión cuenta</h3>
+                </div>
+            </section>
 
-    <section class="portfolio">
-      <div class="portfolio__control contenedor">
-        <h2 class="portfolio__title">Nuestros Equipo</h2>
+            <section class="portfolio">
+                <div class="portfolio__control contenedor">
+                    <h2 class="portfolio__title">Nuestros Equipo</h2>
 
-        <div class="portfolio__cards">
-          <article class="portfolio__card">
-            <img src="./img/img7.jpg" class="portfolio__picture" />
+                    <div class="portfolio__cards">
+                        <article class="portfolio__card">
+                            <img
+                                src="./img/img7.jpg"
+                                class="portfolio__picture"
+                            />
 
-            <div class="portfolio__texts">
-              <h3 class="portfolio__subtitle">Cristian Rodriguez</h3>
-              <p class="portfolio__paragrafo">
-                [Product Owner]</p>
-              <a href="#" class="portfolio__cta">Mi Historia</a>
-              </p>
+                            <div class="portfolio__texts">
+                                <h3 class="portfolio__subtitle">
+                                    Cristian Rodriguez
+                                </h3>
+                                <p class="portfolio__paragrafo">
+                                    [Product Owner]
+                                </p>
+                                <a href="#" class="portfolio__cta"
+                                    >Mi Historia</a
+                                >
+                            </div>
+                        </article>
+
+                        <article class="portfolio__card">
+                            <img
+                                src="./img/img8.jpg"
+                                class="portfolio__picture"
+                            />
+
+                            <div class="portfolio__texts">
+                                <h3 class="portfolio__subtitle">
+                                    Felipe Quintero
+                                </h3>
+                                <p class="portfolio__paragrafo">
+                                    [Scrum Master]
+                                </p>
+                                <a href="#" class="portfolio__cta"
+                                    >Mi Historia</a
+                                >
+                            </div>
+                        </article>
+
+                        <article class="portfolio__card">
+                            <img
+                                src="./img/img9.jpg"
+                                class="portfolio__picture"
+                            />
+
+                            <div class="portfolio__texts">
+                                <h3 class="portfolio__subtitle">
+                                    Alejandra Salgado
+                                </h3>
+                                <p class="portfolio__paragrafo">
+                                    [Cross-funcional]
+                                </p>
+                                <a href="#" class="portfolio__cta"
+                                    >Mi Historia</a
+                                >
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </section>
+
+            <section class="layouts">
+                <div class="contenedor">
+                    <div class="layouts__control">
+                        <figure class="layouts__picture">
+                            <img src="./img/gamer3.jpg" class="layouts__img3" />
+                        </figure>
+
+                        <div class="layouts__referido">
+                            <h2 class="layouts__title">
+                                Puntos para tus juegos siempre
+                            </h2>
+                            <p class="layouts__paragrafo">
+                                Con nuestro sistema de referidos, ventas y
+                                compras que realices, acumularas puntos que
+                                usaras como pago de tus juegos
+                            </p>
+                            <a href="#" class="layouts__cta">Entra ahora</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section>
+                <h2>Tu opinion</h2>
+            </section>
+
+            <section class="noticias">
+                <div>
+                    <h2 class="noticias__titulo">Ultimas Noticias</h2>
+                </div>
+            </section>
+        </main>
+
+        <footer class="footer">
+            <div class="footer__container contenedor">
+                <div class="footer__texts">
+                    <h2 class="title">Contactanos</h2>
+                    <div class="footer__icons">
+                        <a href="#" class="footer__icon fab fa-facebook-f"></a>
+                        <a href="#" class="footer__icon fab fa-twitter"></a>
+                        <a href="#" class="footer__icon fab fa-instagram"></a>
+                    </div>
+                    <nav class="footer__nav">
+                        <a href="#" class="footer__link">Inicio</a>
+                        <a href="#" class="footer__link">Sobre nosotros</a>
+                        <a href="#" class="footer__link">Trabjos</a>
+                    </nav>
+
+                    <p class="footer__copy">
+                        Derechos reservados &copy; Cristian Rodriguez
+                    </p>
+                </div>
+
+                <figure class="footer__img">
+                    <img src="./img/mail.svg" class="footer__picture" />
+                </figure>
             </div>
-          </article>
+        </footer>
 
-          <article class="portfolio__card">
-            <img src="./img/img8.jpg" class="portfolio__picture" />
-
-            <div class="portfolio__texts">
-              <h3 class="portfolio__subtitle">Felipe Quintero</h3>
-              <p class="portfolio__paragrafo">
-                [Scrum Master]
-              </p>
-              <a href="#" class="portfolio__cta">Mi Historia</a>
-            </div>
-          </article>
-
-          <article class="portfolio__card">
-            <img src="./img/img9.jpg" class="portfolio__picture" />
-
-            <div class="portfolio__texts">
-              <h3 class="portfolio__subtitle">Alejandra Salgado</h3>
-              <p class="portfolio__paragrafo">
-                [Cross-funcional]
-              </p>
-              <a href="#" class="portfolio__cta">Mi Historia</a>
-            </div>
-          </article>
-        </div>
-      </div>
-    </section>
-
-    <section class="layouts">
-      <div class="contenedor">
-        <div class="layouts__control">
-          <figure class="layouts__picture">
-            <img src="./img/gamer3.jpg" class="layouts__img3" />
-          </figure>
-
-          <div class="layouts__referido">
-            <h2 class="layouts__title">Puntos para tus juegos siempre</h2>
-            <p class="layouts__paragrafo">
-              Con nuestro sistema de referidos, ventas y compras que realices,
-              acumularas puntos que usaras como pago de tus juegos
-            </p>
-            <a href="#" class="layouts__cta">Entra ahora</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <h2>Tu opinion</h2>
-    </section>
-
-    <section class="noticias">
-      <div>
-        <h2 class="noticias__titulo">Ultimas Noticias</h2>
-      </div>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <div class="footer__container contenedor">
-      <div class="footer__texts">
-        <h2 class="title">Contactanos</h2>
-        <div class="footer__icons">
-          <a href="#" class="footer__icon fab fa-facebook-f"></a>
-          <a href="#" class="footer__icon fab fa-twitter"></a>
-          <a href="#" class="footer__icon fab fa-instagram"></a>
-        </div>
-        <nav class="footer__nav">
-          <a href="#" class="footer__link">Inicio</a>
-          <a href="#" class="footer__link">Sobre nosotros</a>
-          <a href="#" class="footer__link">Trabjos</a>
-        </nav>
-
-        <p class="footer__copy">
-          Derechos reservados &copy; Cristian Rodriguez
-        </p>
-      </div>
-
-      <figure class="footer__img">
-        <img src="./img/mail.svg" class="footer__picture" />
-      </figure>
-    </div>
-  </footer>
-
-  <script src="https://kit.fontawesome.com/0f3d7928c1.js" crossorigin="anonymous"></script>
-</body>
-
+        <script
+            src="https://kit.fontawesome.com/0f3d7928c1.js"
+            crossorigin="anonymous"
+        ></script>
+    </body>
 </html>
