gallery: Se agrega nuevos componentes

--- a/index.html
+++ b/index.html
@@ -126,7 +126,25 @@
 
                         <img src="./img/img3.jpg" class="gallery__picture" />
                     </div>
-                    <h3 class="gallery__comentario">Tu opinión cuenta</h3>
+                    <div class="gallery__game">
+                        <h3 class="gallery__comentario">
+                            Para todo game over existe un play again
+                        </h3>
+                        <div class="gallery__redes">
+                            <img src="img/twitch.svg" class="gallery__icon" />
+
+                            <img src="img/steam.svg" class="gallery__icon" />
+
+                            <img
+                                src="img/playStation.svg"
+                                class="gallery__icon"
+                            />
+
+                            <img src="img/xbox.svg" class="gallery__icon" />
+
+                            <img src="img/origin.svg" class="gallery__icon" />
+                        </div>
+                    </div>
                 </div>
             </section>
 
