--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>PlayerGamer</title>
         <link rel="stylesheet" href="./CSS/estilos.css" />
-        <link rel="stylesheet" href="./CSS/normalize.css" />
+        <link rel="stylesheet" href="normalize.css" />
     </head>
 
     <body>
@@ -119,6 +119,9 @@
             <section class="gallery">
                 <div class="gallery__control contenedor">
                     <h2 class="gallery__title">A que nos dedicamos</h2>
+                    <h3 class="gallery__comentario">
+                        Para todo game over existe un play again
+                    </h3>
                     <div class="gallery__contenedor">
                         <img src="./img/img4.jpg" class="gallery__picture" />
 
@@ -127,9 +130,6 @@
                         <img src="./img/img3.jpg" class="gallery__picture" />
                     </div>
                     <div class="gallery__game">
-                        <h3 class="gallery__comentario">
-                            Para todo game over existe un play again
-                        </h3>
                         <div class="gallery__redes">
                             <img src="img/twitch.svg" class="gallery__icon" />
 
@@ -149,66 +149,114 @@
             </section>
 
             <section class="portfolio">
-                <div class="portfolio__control contenedor">
-                    <h2 class="portfolio__title">Nuestros Equipo</h2>
-
-                    <div class="portfolio__cards">
-                        <article class="portfolio__card">
-                            <img
-                                src="./img/img7.jpg"
-                                class="portfolio__picture"
-                            />
-
-                            <div class="portfolio__texts">
-                                <h3 class="portfolio__subtitle">
+                <div class="contenedor">
+                    <div class="portfolio__control">
+                        <div class="portafolio__grid">
+                            <div class="portafolio__informacion">
+                                <div class="portafolio__titles">
+                                    <h3 class="portafolio__title">
+                                        Conoce <br /><span>Nuestro Equipo</span>
+                                    </h3>
+                                </div>
+                                <p class="portafolio__paragrafo">
+                                    Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Aut adipisci veniam,
+                                    consectetur consequuntur atque ad recusandae
+                                    reiciendis id. Odio repellat quae rerum
+                                    aliquam totam voluptatibus sunt qui maiores
+                                    architecto sit inventore placeat provident
+                                    expedita perspiciatis odit, consectetur
+                                    alias at, soluta, delectus nam libero
+                                    explicabo commodi temporibus iste?<br /><br />
+                                    Laboriosam, facere nemo! Lorem ipsum dolor
+                                    sit amet consectetur adipisicing elit. Aut
+                                    adipisci veniam, consectetur consequuntur
+                                    atque ad recusandae reiciendis id. Odio
+                                    repellat quae rerum aliquam totam
+                                    voluptatibus sunt qui maiores architecto sit
+                                    inventore placeat provident expedita
+                                    perspiciatis odit, consectetur alias at,
+                                    soluta, delectus nam libero explicabo
+                                    commodi temporibus iste? Laboriosam, facere
+                                    nemo!
+                                </p>
+                            </div>
+                            <div class="portafolio__member">
+                                <img
+                                    src="img/member1.jpg"
+                                    class="portafolio__picture"
+                                />
+                                <h4 class="portafolio__name">
+                                    Lorenzo Sandoval
+                                </h4>
+                            </div>
+                            <div class="portafolio__member">
+                                <img
+                                    src="img/member2.jpg"
+                                    class="portafolio__picture"
+                                />
+                                <h3 class="portafolio__name">Jenny Fox</h3>
+                            </div>
+                            <div class="portafolio__member">
+                                <img
+                                    src="img/member3.jpg"
+                                    class="portafolio__picture"
+                                />
+                                <h4 class="portafolio__name">Alan Felix</h4>
+                            </div>
+                            <div class="portafolio__member">
+                                <img
+                                    src="img/member4.jpg"
+                                    class="portafolio__picture"
+                                />
+                                <h4 class="portafolio__name">
+                                    Felipe Rodriguez
+                                </h4>
+                            </div>
+                            <div class="portafolio__member">
+                                <img
+                                    src="img/member5.jpg"
+                                    class="portafolio__picture"
+                                />
+                                <h4 class="portafolio__name">
+                                    Sebastian Quintero
+                                </h4>
+                            </div>
+                            <div class="portafolio__member">
+                                <img
+                                    src="img/member6.jpg"
+                                    class="portafolio__picture"
+                                />
+                                <h4 class="portafolio__name">
+                                    Karen Escalante
+                                </h4>
+                            </div>
+                            <div class="portafolio__member">
+                                <img
+                                    src="img/member7.jpg"
+                                    class="portafolio__picture"
+                                />
+                                <h4 class="portafolio__name">
                                     Cristian Rodriguez
-                                </h3>
-                                <p class="portfolio__paragrafo">
-                                    [Product Owner]
-                                </p>
-                                <a href="#" class="portfolio__cta"
-                                    >Mi Historia</a
-                                >
+                                </h4>
                             </div>
-                        </article>
-
-                        <article class="portfolio__card">
-                            <img
-                                src="./img/img8.jpg"
-                                class="portfolio__picture"
-                            />
-
-                            <div class="portfolio__texts">
-                                <h3 class="portfolio__subtitle">
-                                    Felipe Quintero
-                                </h3>
-                                <p class="portfolio__paragrafo">
-                                    [Scrum Master]
-                                </p>
-                                <a href="#" class="portfolio__cta"
-                                    >Mi Historia</a
-                                >
+                            <div class="portafolio__member">
+                                <img
+                                    src="img/member8.jpg"
+                                    class="portafolio__picture"
+                                />
+                                <h4 class="portafolio__name">Elen Uchima</h4>
                             </div>
-                        </article>
-
-                        <article class="portfolio__card">
-                            <img
-                                src="./img/img9.jpg"
-                                class="portfolio__picture"
-                            />
-
-                            <div class="portfolio__texts">
-                                <h3 class="portfolio__subtitle">
-                                    Alejandra Salgado
-                                </h3>
-                                <p class="portfolio__paragrafo">
-                                    [Cross-funcional]
-                                </p>
-                                <a href="#" class="portfolio__cta"
-                                    >Mi Historia</a
-                                >
+                            <div class="portafolio__member">
+                                <img
+                                    src="img/member9.jpg"
+                                    class="portafolio__picture"
+                                />
+                                <h4 class="portafolio__name">
+                                    Camilo Contreras
+                                </h4>
                             </div>
-                        </article>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -235,8 +283,93 @@
                 </div>
             </section>
 
-            <section>
-                <h2>Tu opinion</h2>
+            <section class="opinion">
+                <div class="contenedor">
+                    <h2 class="opinion__title">Tu opinión</h2>
+                    <p class="opinion__caption">Clientes dicen</p>
+                    <div class="opinion__contenedor">
+                        <div class="opinion__mensaje">
+                            <div class="opinion__control">
+                                <figure class="opinion__picture">
+                                    <img
+                                        src="img/img13.jpg"
+                                        class="opinion__img"
+                                    />
+                                </figure>
+                                <div class="opinion__persona">
+                                    <h3>Armando Perez</h3>
+                                    <span>@Perezdo</span>
+                                </div>
+                            </div>
+                            <p class="opinion__paragrafo">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Dolorum quasi atque incidunt
+                                suscipit perspiciatis ab sit adipisci
+                                asperiores. Minus, aut.
+                            </p>
+                        </div>
+                        <div class="opinion__mensaje">
+                            <div class="opinion__control">
+                                <figure class="opinion__picture">
+                                    <img
+                                        src="img/img13.jpg"
+                                        class="opinion__img"
+                                    />
+                                </figure>
+                                <div class="opinion__persona">
+                                    <h3>Armando Perez</h3>
+                                    <span>@Perezdo</span>
+                                </div>
+                            </div>
+                            <p class="opinion__paragrafo">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Dolorum quasi atque incidunt
+                                suscipit perspiciatis ab sit adipisci
+                                asperiores. Minus, aut.
+                            </p>
+                        </div>
+                        <div class="opinion__mensaje">
+                            <div class="opinion__control">
+                                <figure class="opinion__picture">
+                                    <img
+                                        src="img/img13.jpg"
+                                        class="opinion__img"
+                                    />
+                                </figure>
+                                <div class="opinion__persona">
+                                    <h3>Armando Perez</h3>
+                                    <span>@Perezdo</span>
+                                </div>
+                            </div>
+                            <p class="opinion__paragrafo">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Dolorum quasi atque incidunt
+                                suscipit perspiciatis ab sit adipisci
+                                asperiores. Minus, aut.
+                            </p>
+                        </div>
+                        <div class="opinion__mensaje">
+                            <div class="opinion__control">
+                                <figure class="opinion__picture">
+                                    <img
+                                        src="img/img13.jpg"
+                                        class="opinion__img"
+                                    />
+                                </figure>
+                                <div class="opinion__persona">
+                                    <h3>Armando Perez</h3>
+                                    <span>@Perezdo</span>
+                                </div>
+                            </div>
+                            <p class="opinion__paragrafo">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Dolorum quasi atque incidunt
+                                suscipit perspiciatis ab sit adipisci
+                                asperiores. Minus, aut.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <section class="noticias">
