--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <figure class="hero__picture">
-          <img src="ilustracion.svg" class="hero__img" />
+          <img src="img/ilustracion.svg" class="hero__img" />
         </figure>
       </section>
     </header>
@@ -341,7 +341,7 @@
         </div>
 
         <figure class="footer__img">
-          <img src="./img/mail.svg" class="footer__picture" />
+          <img src="img/mail.svg" class="footer__picture" />
         </figure>
       </div>
     </footer>
