Modificaciones CSS estilos

--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@
           <div class="noticias__grid">
             <div class="noticias__opuesto notiCero">
               <figure class="noticias__picture">
-                <img src="img/img13.jpg" class="noticias__img" />
+                <img src="img/FortniteNoti.jpg" class="noticias__img" />
               </figure>
               <div class="noticias__textos">
-                <h3 class="noticias__subtitulo">Lorem ipsum dolor sit amet.</h3>
+                <h3 class="noticias__subtitulo">FORTNITE SE VA DE CHINA.</h3>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Nesciunt iste perferendis cupiditate beatae nihil nisi
@@ -312,7 +312,19 @@
                 </p>
               </div>
             </div>
-            <div class="notiUno">dos</div>
+            <div class="noticias__informacion notiUno">
+              <figure class="noticias__pintura">
+                <img src="img/callNoti.jpg" class="noticias__imagen" />
+              </figure>
+              <div>
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Exercitationem labore tenetur rem corrupti voluptate suscipit
+                  voluptates optio vel modi voluptatem!
+                </p>
+              </div>
+            </div>
             <div class="notiDos">tres</div>
             <div class="notiTres">cuatro</div>
           </div>
