Pag Producto: Card, main realizado

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               type="search"
               id="BuscarJuego"
               name="BuscarJuego"
-              placeholder="..."
+              placeholder="Tu juego"
             />
             <input type="submit" class="hero__boton" />
           </form>
