--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
           <div class="nav__links">
             <a href="#" class="nav__link">Inicio</a>
-            <a href="/pages/producto.html" class="nav__link">Producto</a>
+            <a href="./pages/producto.html" class="nav__link">Producto</a>
             <a href="/pages/servicios.html" class="nav__link">servicios</a>
             <a href="#" class="nav__link nav__link--boton">Iniciar Sesión</a>
             <a href="#" class="nav__link nav__link--boton">Registro</a>
