--- a/pages/producto.html
+++ b/pages/producto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Producto</title>
     <link rel="stylesheet" href="../CSS/producto.css" />
-    <link rel="stylesheet" href="/normalize.css" />
+    <link rel="stylesheet" href="../normalize.css" />
   </head>
 
   <body>
@@ -19,7 +19,7 @@
           </figure>
 
           <div class="nav__links">
-            <a href="/index.html" class="nav__link">Inicio</a>
+            <a href="../index.html" class="nav__link">Inicio</a>
             <a href="/pages/producto.html" class="nav__link">Producto</a>
             <a href="/pages/servicios.html" class="nav__link">servicios</a>
             <a href="#" class="nav__link nav__link--boton">Iniciar Sesión</a>
