footer: se agrega footer a pag producto

--- a/pages/producto.html
+++ b/pages/producto.html
@@ -20,7 +20,7 @@
 
           <div class="nav__links">
             <a href="../index.html" class="nav__link">Inicio</a>
-            <a href="/pages/producto.html" class="nav__link">Producto</a>
+            <a href="producto.html" class="nav__link">Producto</a>
             <a href="/pages/servicios.html" class="nav__link">servicios</a>
             <a href="#" class="nav__link nav__link--boton">Iniciar Sesión</a>
             <a href="#" class="nav__link nav__link--boton">Registro</a>
@@ -202,7 +202,32 @@
       </div>
     </main>
 
-    <!-- JavaScript Bundle with Popper -->
+    <footer class="footer">
+      <div class="footer__container contenedor">
+        <div class="footer__texts">
+          <h2 class="title">Contactanos</h2>
+          <div class="footer__icons">
+            <a href="#" class="footer__icon fab fa-facebook-f"></a>
+            <a href="#" class="footer__icon fab fa-twitter"></a>
+            <a href="#" class="footer__icon fab fa-instagram"></a>
+          </div>
+          <nav class="footer__nav">
+            <a href="#" class="footer__link">Inicio</a>
+            <a href="#" class="footer__link">Sobre nosotros</a>
+            <a href="#" class="footer__link">Trabjos</a>
+          </nav>
+
+          <p class="footer__copy">
+            Derechos reservados &copy; Cristian Rodriguez
+          </p>
+        </div>
+
+        <figure class="footer__img">
+          <img src="../img/socialUno.svg" class="footer__picture" />
+        </figure>
+      </div>
+    </footer>
+
     <script
       src="https://kit.fontawesome.com/0f3d7928c1.js"
       crossorigin="anonymous"
