Se realizo modificacion responsive

--- a/index.html
+++ b/index.html
@@ -12,20 +12,29 @@
   <body>
     <header class="hero">
       <nav class="nav">
-        <section class="nav__contenedor contenedor">
+        <div class="nav__contenedor contenedor">
           <figure class="nav__logo">
             <img src="img/bx-game.svg" class="hero__picture" />
             <h2 class="nav__titulo">PlayerGamer</h2>
           </figure>
 
-          <div class="nav__links">
-            <a href="#" class="nav__link">Inicio</a>
-            <a href="pages/producto.html" class="nav__link">Producto</a>
-            <a href="/pages/servicios.html" class="nav__link">servicios</a>
+          <label for="menu" class="nav__label">
+            <img src="/img/bx-menu.svg" class="nav__img" />
+          </label>
+          <input type="checkbox" id="menu" class="nav__input" />
+
+          <div class="nav__menu">
+            <a href="#" class="nav__link nav__link--media">Inicio</a>
+            <a href="pages/producto.html" class="nav__link nav__link--media"
+              >Producto</a
+            >
+            <a href="/pages/servicios.html" class="nav__link nav__link--media"
+              >servicios</a
+            >
             <a href="#" class="nav__link nav__link--boton">Iniciar Sesión</a>
             <a href="#" class="nav__link nav__link--boton">Registro</a>
           </div>
-        </section>
+        </div>
       </nav>
 
       <section class="hero__main contenedor">
@@ -48,9 +57,9 @@
           </form>
         </div>
 
-        <figure class="hero__picture">
+        <!-- <figure class="hero__picture">
           <img src="img/ilustracion.svg" class="hero__img" />
-        </figure>
+        </figure> -->
       </section>
     </header>
 
@@ -125,7 +134,7 @@
         <div class="contenedor">
           <div class="portfolio__control">
             <div class="portafolio__grid">
-              <div class="portafolio__informacion">
+              <div class="portafolio__informacion nota">
                 <div class="portafolio__titles">
                   <h3 class="portafolio__title">
                     Conoce <br /><span>Nuestro Equipo</span>
@@ -149,39 +158,39 @@
                   nemo!
                 </p>
               </div>
-              <div class="portafolio__member">
+              <div class="portafolio__member member1">
                 <img src="img/member1.jpg" class="portafolio__picture" />
                 <h4 class="portafolio__name">Lorenzo Sandoval</h4>
               </div>
-              <div class="portafolio__member">
+              <div class="portafolio__member member2">
                 <img src="img/member2.jpg" class="portafolio__picture" />
                 <h3 class="portafolio__name">Jenny Fox</h3>
               </div>
-              <div class="portafolio__member">
+              <div class="portafolio__member member3">
                 <img src="img/member3.jpg" class="portafolio__picture" />
                 <h4 class="portafolio__name">Alan Felix</h4>
               </div>
-              <div class="portafolio__member">
+              <div class="portafolio__member membar4">
                 <img src="img/member4.jpg" class="portafolio__picture" />
                 <h4 class="portafolio__name">Felipe Rodriguez</h4>
               </div>
-              <div class="portafolio__member">
+              <div class="portafolio__member member5">
                 <img src="img/member5.jpg" class="portafolio__picture" />
                 <h4 class="portafolio__name">Sebastian Quintero</h4>
               </div>
-              <div class="portafolio__member">
+              <div class="portafolio__member member6">
                 <img src="img/member6.jpg" class="portafolio__picture" />
                 <h4 class="portafolio__name">Karen Escalante</h4>
               </div>
-              <div class="portafolio__member">
+              <div class="portafolio__member member7">
                 <img src="img/member7.jpg" class="portafolio__picture" />
                 <h4 class="portafolio__name">Cristian Rodriguez</h4>
               </div>
-              <div class="portafolio__member">
+              <div class="portafolio__member member8">
                 <img src="img/member8.jpg" class="portafolio__picture" />
                 <h4 class="portafolio__name">Elen Uchima</h4>
               </div>
-              <div class="portafolio__member">
+              <div class="portafolio__member member9">
                 <img src="img/member9.jpg" class="portafolio__picture" />
                 <h4 class="portafolio__name">Camilo Contreras</h4>
               </div>
