--- a/pages/producto.html
+++ b/pages/producto.html
@@ -18,10 +18,21 @@
             <h2 class="nav__titulo">PlayerGamer</h2>
           </figure>
 
-          <div class="nav__links">
-            <a href="../index.html" class="nav__link">Inicio</a>
-            <a href="producto.html" class="nav__link">Producto</a>
-            <a href="/pages/servicios.html" class="nav__link">servicios</a>
+          <label for="menu" class="nav__label">
+            <img src="/img/bx-menu.svg" class="nav__img" />
+          </label>
+          <input type="checkbox" id="menu" class="nav__input" />
+
+          <div class="nav__menu">
+            <a href="../index.html" class="nav__link nav__link--media"
+              >Inicio</a
+            >
+            <a href="producto.html" class="nav__link nav__link--media"
+              >Producto</a
+            >
+            <a href="/pages/servicios.html" class="nav__link nav__link--media"
+              >servicios</a
+            >
             <a href="#" class="nav__link nav__link--boton">Iniciar Sesión</a>
             <a href="#" class="nav__link nav__link--boton">Registro</a>
           </div>
@@ -70,7 +81,7 @@
           </figure>
           <div class="portafolio__texts">
             <div>
-              <h2>Call of Duty Cold</h2>
+              <h2 class="juego">Call of Duty Cold</h2>
               <p class="precio"><span class="moneda">$</span>30</p>
               <h4 class="text">precio</h4>
             </div>
@@ -85,7 +96,7 @@
           </figure>
           <div class="portafolio__texts">
             <div>
-              <h2>Death Stranding</h2>
+              <h2 class="juego">Death Stranding</h2>
               <p class="precio"><span class="moneda">$</span>30</p>
               <h4 class="text">precio</h4>
             </div>
@@ -100,7 +111,7 @@
           </figure>
           <div class="portafolio__texts">
             <div>
-              <h2>Days Gone</h2>
+              <h2 class="juego">Days Gone</h2>
               <p class="precio"><span class="moneda">$</span>30</p>
               <h4 class="text">precio</h4>
             </div>
@@ -115,7 +126,7 @@
           </figure>
           <div class="portafolio__texts">
             <div>
-              <h2>Call of Duty WWII</h2>
+              <h2 class="juego">Call of Duty WWII</h2>
               <p class="precio"><span class="moneda">$</span>30</p>
               <h4 class="text">precio</h4>
             </div>
@@ -130,7 +141,7 @@
           </figure>
           <div class="portafolio__texts">
             <div>
-              <h2>Resident Evil 2</h2>
+              <h2 class="juego">Resident Evil 2</h2>
               <p class="precio"><span class="moneda">$</span>30</p>
               <h4 class="text">precio</h4>
             </div>
@@ -145,7 +156,7 @@
           </figure>
           <div class="portafolio__texts">
             <div>
-              <h2>Resident Evil 3</h2>
+              <h2 class="juego">Resident Evil 3</h2>
               <p class="precio"><span class="moneda">$</span>30</p>
               <h4 class="text">precio</h4>
             </div>
@@ -160,7 +171,7 @@
           </figure>
           <div class="portafolio__texts">
             <div>
-              <h2>Horizon Zero</h2>
+              <h2 class="juego">Horizon Zero</h2>
               <p class="precio"><span class="moneda">$</span>30</p>
               <h4 class="text">precio</h4>
             </div>
@@ -175,7 +186,7 @@
           </figure>
           <div class="portafolio__texts">
             <div>
-              <h2>Read Dead II</h2>
+              <h2 class="juego">Read Dead II</h2>
               <p class="precio"><span class="moneda">$</span>30</p>
               <h4 class="text">precio</h4>
             </div>
@@ -190,7 +201,7 @@
           </figure>
           <div class="portafolio__texts">
             <div>
-              <h2>Call of Duty</h2>
+              <h2 class="juego">The Last of Us</h2>
               <p class="precio"><span class="moneda">$</span>30</p>
               <h4 class="text">precio</h4>
             </div>
