Modificaciones: hero, porcentajes en page inicio

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PlayerGamer</title>
     <link rel="stylesheet" href="./CSS/estilos.css" />
-    <link rel="stylesheet" href="normalize.css" />
+    <!-- <link rel="stylesheet" href="normalize.css" /> -->
   </head>
 
   <body>
@@ -45,7 +45,7 @@
             maduras como los libros y peliculas
           </p>
           <form action="/action_page.php" class="hero__form">
-            <label for="BuscarJuego" class="hero__buscar">Buscar:</label>
+            <label for="BuscarJuego" class="hero__buscar">Buscar :</label>
             <input
               class="hero__search"
               type="search"
@@ -69,7 +69,7 @@
             Compra videojuegos y compártelos como nunca antes.
           </h2>
           <div class="about__secciones">
-            <div class="about__seller">
+            <div class="about__seller about__seller--separador">
               <figure class="about__picture">
                 <img src="img/gamer1.jpg" alt="jugador" class="about__img1" />
               </figure>
